# microevolution

./: .gitignore  README.md  batch20.pth  colorchooser  main.py  model.pth  model0.pth  model1.pth  model10.pth  model10oldDQN.pth  model11.pth  model12.pth  model13.pth  model14.pth  model15.pth  model16.pth  model17.pth  model18.pth  model19.pth  model2.pth  model20.pth  model21.pth  model3.pth  model4.pth  model5.pth  model6.pth  model7.pth  model8.pth  model9.pth  neural.py  neuro.py  pyproject.toml  requirements.txt  test.py  test2.py  test3.py  weights_fc1.txt  weights_fc2.txt  weights_fc3.txt  weights_fc4.txt
.github/.workflows/: train-model.yaml
.github/workflows/: train-model.yaml
classes_and_functions/: button.py  charts.py  colors.py  menu.py  model.py  objects.py
client/: ddpg.py  main.py  menu.py  model_loader.py  plotting.py  render.py  trainer.py
common/: core.py  game_object.py  models.py  settings.py  utils.py
models/: actor_950.pth  best_actor.pth  best_critic.pth  best_model_info.json  critic_950.pth
output/: final_model_actor.pth  final_model_critic.pth
runs/micro_evolution_1d131963-1d45-4914-b15e-2517ff77053d/: events.out.tfevents.1746620157.EPGETBIW0740.30656.0
runs/micro_evolution_4d20c921-1f8d-4711-af3b-940516b8d599/: events.out.tfevents.1746699124.EPGETBIW0740.8768.0
server/: app.py  simulation.py
server/templates/: index.html
settings/: buttons.yml  checkboxes.yml  input_boxes.yml  settings.yml
some_code/: game_of_life.py  some_code.py  test.py
weights&models/models/: batch40.pth  batch40v10.pth  batch40v100passive.pth  batch40v13.pth  batch40v2.pth  batch40v3.pth  batch40v6.pth  batch40v8.pth  batch60.pth  batch60v69active2.pth
weights&models/models/batch60active2/: model0.pth  model1.pth  model10.pth  model11.pth  model12.pth  (+97 more)
weights&models/weights/: weights_fc1.txt  weights_fc2.txt  weights_fc3.txt  weights_fc4.txt
