[tool.poetry]
name = "microevolution"
version = "0.1.0"
description = "Microevolution project"
authors = ["Artsiom Rachok <artemgsr@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = ">=2.2.5,<3.0.0"
torch = ">=2.7.0,<3.0.0"
matplotlib = ">=3.10.3,<4.0.0"

[tool.poetry.group.client.dependencies]
pygame = ">=2.6.1"
pygame-menu = ">=4.5.2"

[tool.poetry.group.server.dependencies]
flask = ">=3.1.0"
flask-socketio = ">=5.5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"